[gd_scene load_steps=12 format=3 uid="uid://dn2pln1gqhliw"]

[ext_resource type="Script" uid="uid://cfwjbuf0epy8m" path="res://scripts/ui/menu.gd" id="1_cx0sj"]
[ext_resource type="Texture2D" uid="uid://xlavw1qbthl4" path="res://images/menu-art/layer6-fundo.png" id="2_e11en"]
[ext_resource type="Texture2D" uid="uid://cx2vk4nk33su4" path="res://images/menu-art/layer4-torre.png" id="3_288ov"]
[ext_resource type="Texture2D" uid="uid://b0hy8qkjdxvul" path="res://images/menu-art/layer4-nuvens-frente.png" id="4_tub5d"]
[ext_resource type="Texture2D" uid="uid://yvu5iksjdug5" path="res://images/menu-art/layer3-people.png" id="5_dnmb1"]
[ext_resource type="PackedScene" uid="uid://c2jjdr2m3jxkq" path="res://scenes/ui/level_selection.tscn" id="5_e11en"]
[ext_resource type="Texture2D" uid="uid://qd2wm3li0o8f" path="res://images/menu-art/layer2-mist2.png" id="6_5j7hh"]
[ext_resource type="Texture2D" uid="uid://bewiur2sfe8go" path="res://images/menu-art/layer1-mist1.png" id="7_y7dvm"]
[ext_resource type="FontFile" uid="uid://bkjnsvyi6mls8" path="res://fonts/Medieval Scroll of Wisdom.ttf" id="9_288ov"]
[ext_resource type="Texture2D" uid="uid://bev1fcgpl4ijk" path="res://images/menu-art/title.png" id="10_288ov"]

[sub_resource type="LabelSettings" id="LabelSettings_tub5d"]
font = ExtResource("9_288ov")
font_size = 100

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cx0sj")

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -35.0
offset_top = -34.0
offset_right = 1117.0
offset_bottom = 781.0
scale = Vector2(1.0622, 1.0622)
texture = ExtResource("2_e11en")

[node name="tower" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = -31.0
offset_right = 1168.0
offset_bottom = 784.0
scale = Vector2(0.847076, 0.847076)
texture = ExtResource("3_288ov")

[node name="clouds-tower" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -42.0
offset_top = -46.0
offset_right = 1110.0
offset_bottom = 769.0
scale = Vector2(1.06171, 1.06171)
texture = ExtResource("4_tub5d")

[node name="people" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -46.0
offset_top = -240.0
offset_right = 1106.0
offset_bottom = 575.0
scale = Vector2(1.12, 1.12)
texture = ExtResource("5_dnmb1")

[node name="fog2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -42.0
offset_top = -197.0
offset_right = 1110.0
offset_bottom = 618.0
scale = Vector2(1.08, 1.08)
texture = ExtResource("6_5j7hh")

[node name="fog1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -141.0
offset_top = -43.0
offset_right = 1011.0
offset_bottom = 605.0
scale = Vector2(1.2, 1.2)
texture = ExtResource("7_y7dvm")

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(678, 263)
scale = Vector2(0.76, 0.76)
texture = ExtResource("10_288ov")

[node name="Botao" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 889.0
offset_top = 468.0
offset_right = 1259.0
offset_bottom = 638.0
scale = Vector2(0.48, 0.48)
color = Color(0.52, 0.242667, 0, 1)

[node name="BotaoBack" type="ColorRect" parent="Botao"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 355.0
offset_bottom = 155.0
color = Color(1, 0.698039, 0.219608, 1)

[node name="PlayText" type="Label" parent="Botao/BotaoBack"]
layout_mode = 0
offset_left = 49.1666
offset_top = 59.5833
offset_right = 316.167
offset_bottom = 182.583
text = "Play"
label_settings = SubResource("LabelSettings_tub5d")

[node name="BotaoPlay" type="Button" parent="Botao/BotaoBack/PlayText"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -183.5
offset_top = -138.0
offset_right = 166.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 0
flat = true

[node name="LevelSelection" parent="." instance=ExtResource("5_e11en")]
visible = false

[connection signal="pressed" from="Botao/BotaoBack/PlayText/BotaoPlay" to="." method="_on_botao_play_pressed"]
